# substreams-accounts

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  substreams.yaml
connect-web/: .env-example  package.json
connect-web/src/: App.tsx
envoy/: envoy.yaml  gen.sh  kv.pb  read.pb  read.proto
envoy/proto/: read.proto
proto/: accounts.proto
src/: abi.rs  lib.rs
src/pb/: antelope.accounts.v1.rs  mod.rs
