[package]
name = "substreams-accounts"
version = "0.1.0"
description = "Substream template demo project"
edition = "2021"
repository = "https://github.com/pinax-network/substreams-accounts"

[lib]
name = "substreams_accounts"
crate-type = ["cdylib"]

[dependencies]
prost = "^0.11.0"
prost-types = "0.11.2"
# Use latest from https://crates.io/crates/substreams
substreams = "0.5.1"
substreams-antelope-core = "0.0.4"
serde_json = "1.0.91"
serde = "1.0.91"

[build-dependencies]
prost-build = "0.11.2"
anyhow = "1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"